# sionna-aerial-uav-demo

./: .gitignore  CLAUDE.md  CLAUDE.md.template  README.md  pyproject.toml
.claude/commands/: phase0-run.md  setup-env.md  test.md
.claude/skills/uav-sionna-pyaerial/: SKILL.md
data/phase1/: latest.csv  latest.json  phase1_results_20251126_062329.csv  phase1_results_20251126_062329.json  phase1_results_20251126_062618.json
data/phase2_interference/: README.md  interferers.csv  summary.csv
data/phase2_interference/beam_kpi/: README.md
data/phase2_interference/raw/: demo_uav_t1p000.json  demo_uav_t1p000.npz  demo_uav_t1p000_cubb.h5  real_far_t3p000.json  real_far_t3p000.npz  real_far_t3p000_cubb.h5  real_mid_t2p000.json  real_mid_t2p000.npz  real_mid_t2p000_cubb.h5  real_near_t1p000.json  real_near_t1p000.npz  real_near_t1p000_cubb.h5  test_scenario_t1p000.json  test_scenario_t1p000.npz  test_scenario_t1p000_cubb.h5  train_10_t1p000.json  train_10_t1p000.npz  train_10_t1p000_ru.h5  train_11_t1p100.json  train_11_t1p100.npz  train_11_t1p100_ru.h5  train_12_t1p200.json  train_12_t1p200.npz  train_12_t1p200_ru.h5  train_13_t1p300.json  train_13_t1p300.npz  train_13_t1p300_cubb.h5  train_14_t1p400.json  train_14_t1p400.npz  train_14_t1p400_cubb.h5  train_15_t1p500.json  train_15_t1p500.npz  train_15_t1p500_ru.h5  train_16_t1p600.json  train_16_t1p600.npz  train_16_t1p600_ru.h5  train_17_t1p700.json  train_17_t1p700.npz  train_17_t1p700_cubb.h5  train_18_t1p800.json  (+35 more)
docker/: Dockerfile.orchestrator  docker-compose.yml
scripts/: api_client.py  ccmd.sh  ngc_login.sh  run_api.sh  run_phase0.sh  run_phase1_scenarios.py  setup.sh  setup_env.sh  validate_api.py
src/sionna_link_minimal/: __init__.py
src/uav_acar_demo/: __init__.py  cli.py  config.py
src/uav_acar_demo/aerial/: __init__.py  py_aerial_interface.py
src/uav_acar_demo/ml/: __init__.py  models.py  train_dense_baseline.py
src/uav_acar_demo/sim/: __init__.py  generate_link_metrics.py  link_bridge.py  link_estimator.py  sionna_scenarios.py
src/uav_acar_sionna/: __init__.py  config.py  models.py  sionna_backend.py
src/uav_acar_sionna/api/: README.md  __init__.py  main.py  schemas.py
src/uav_acar_sionna/ml/: __init__.py  dataset.py  models.py  train.py
src/uav_acar_sionna/orchestrator/: cubb_adapter.py  dataset_structures.py  dataset_writer.py  host_roles.py  matlab_adapter.py  run_emulation.py  sionna_adapter.py
tests/: conftest.py  test_api.py  test_link_estimator.py  test_ml_models.py  test_ml_module.py  test_orchestrator_smoke.py  test_sionna_backend.py  test_sionna_phase0.py
