[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-acar-sionna"
version = "1.0.0"
description = "UAV + ACAR Sionna integration - monorepo for link simulation, interference sensing, and beam management"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tensorflow>=2.13",
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0",
    "ruff>=0.5.0",
]

sionna = [
    "sionna>=1.2.1",
    "matplotlib>=3.8",
]

all = [
    "tensorflow>=2.13",
    "numpy>=1.24",
    "scipy>=1.11",
    "sionna>=1.2.1",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
